@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               v6
-version:            0.035
+version:            0.036
 abstract:           A Perl 6 implementation
 author:
     - Flávio S. Glock <fglock@gmail.com>
